--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3,3 +3,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: "Uncut Sans";
+    src: url("fonts/uncutsans/UncutSans-Regular.otf") format("truetype");
+   }
+
+@layer base {
+  body {
+    font-family: 'Uncut Sans', sans-serif;
+  }
+}
