--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -1,15 +1,50 @@
 .menu {
     visibility: hidden;
     position: absolute;
-    padding: 70px;
-    left: 0;
-    width: 100%; 
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%; 
     text-align: center;
+    align-items: center;
     z-index: 2;
-    transition: all 0.5s;
+    transition: all 1.2s;
     opacity: 0;
-    background-color: white;
+}
+
+.menu__link,
+.menu__item {
+    display: grid;
+    align-items: center;
+    justify-items: center;
+}
+
+.menu__item {
+    width: 100%;
+    height: 100%;
+}
+
+.menu__link {
+    width: 75%;
+    height: 75%;
+}
+
+.menu__item {
+    border: 1px solid black;
+}
+
+.menu__center-pts {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 2vh;
+    height: 2vh;
+    z-index: 2;
 }
 
 .menu__nav-toggle {
