--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -12,7 +12,7 @@
     text-align: center;
     align-items: center;
     z-index: 2;
-    transition: all 1.2s;
+    transition: all 2.2s;
     opacity: 0;
 }
 
@@ -35,6 +35,7 @@
 
 .menu__item {
     border: 1px solid black;
+    font-weight: 500;
 }
 
 .menu__center-pts {
@@ -62,7 +63,7 @@
     background-color: black;
     position: absolute;
     border-radius: 15px;
-    transition-duration: 0.4s;
+    transition-duration: 0.5s;
     z-index: 3;
 }
 
