--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -23,6 +23,32 @@ footer {
     background-color: #edeae6;
 }
 
+a {
+    position: relative;
+}
+
+a::after {
+    content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0.1em;
+    background-color: black;
+    opacity: 0;
+    transition-duration: 300ms;
+}
+
+a:hover {
+    text-decoration: none;
+    transition-duration: 300ms;
+}
+
+a:hover::after {
+  opacity: 1;
+  transform: translate3d(0, 0.2em, 0);
+}
+
 .footer__class {
     display: grid;
     grid-template-columns: 4fr 1fr;
