--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,10 +4,12 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Fonts */
 @font-face {
     font-family: "Uncut Sans";
     src: url("src/assets/fonts/UncutSans-Variable.ttf") format("truetype");
    }
+/* */
 
 body {
     font-family: 'Uncut Sans', sans-serif;
@@ -34,7 +36,7 @@ a::after {
     left: 0;
     width: 100%;
     height: 0.1em;
-    background-color: black;
+    background-color: #141414;
     opacity: 0;
     transition-duration: 300ms;
 }
@@ -58,6 +60,28 @@ a:hover::after {
     grid-template-columns: 4fr 1fr;
     padding: 4vh;
 }
+
+/* Accueil */
+.cover__mask {
+    mask-image: url('/img/test.png');
+    mask-size: 100%;
+    mask-repeat: no-repeat;
+  }
+  .cover__parent {
+    position: relative;
+    contain: content;
+    background-image: url('/img/GLASS_COLOR_PLANT_OFF.png');
+    max-width: 100%;
+  }
+  .cover__rectangle {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 71%;
+    background-color: #edeae6;
+  }
+/* */
 
 @media (max-width: 768px) {
     .footer__class {
