correction font import

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,7 +7,9 @@
 /* Fonts */
 @font-face {
     font-family: "Uncut Sans";
-    src: url("src/assets/fonts/UncutSans-Variable.ttf") format("truetype");
+    src: url("/src/assets/fonts/UncutSans-Variable.ttf") format("truetype"),
+      url("/src/assets/fonts/UncutSans-Variable.woff2") format("woff2"),
+      url("/src/assets/fonts/UncutSans-Regular.otf") format("opentype");
    }
 /* */
 
