--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16,6 +16,7 @@
 body {
     font-family: 'Uncut Sans', sans-serif;
     color: #141414;
+    cursor: default;
 }
 
 header {
@@ -95,4 +96,9 @@ a:hover::after {
   .current-time {
     transform: translate(-50%, 0%);
   }
+}
+
+.project__page {
+  background-color: #141414;
+  color: #edeae6;
 }
