--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -86,12 +86,6 @@ a:hover::after {
   }
 /* */
 
-@media (max-width: 768px) {
-    .footer__class {
-        padding: 2vh;
-    }
-}
-
 @layer components {
   .current-time {
     transform: translate(-50%, 0%);
@@ -101,4 +95,23 @@ a:hover::after {
 .project__page {
   background-color: #141414;
   color: #edeae6;
+  font-size: 1.875rem;
+  font-weight: bold;
+  line-height: 1.2;
+}
+
+.animate-hover {
+  opacity: 0;
+}
+.animate--anim {
+  transition: opacity 1s ease;
+}
+
+@media (max-width: 768px) {
+  .footer__class {
+      padding: 2vh;
+  }
+  .project__page {
+      font-size: 1.125rem;
+  }
 }
