--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -16,7 +16,7 @@
 body {
     font-family: 'Uncut Sans', sans-serif;
     color: #141414;
-    cursor: default;
+    cursor: none;
 }
 
 header {
@@ -130,4 +130,21 @@ a::after {
   .project__page {
       font-size: 1.125rem;
   }
+}
+
+/* Cursor */
+
+.cursor {
+  position: fixed;
+  top: 0;
+  left: 0;
+  mix-blend-mode: difference;
+  z-index: 1000;
+  transition-duration: 150ms;
+  transition-timing-function: ease-out;
+  pointer-events: none;
+}
+
+.cursor circle {
+  fill: white;
 }
