--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -17,6 +17,8 @@ body {
     font-family: 'Uncut Sans', sans-serif;
     color: #141414;
     cursor: none;
+    -ms-overflow-style: none; 
+    overflow: -moz-scrollbars-none; 
 }
 
 header {
@@ -30,6 +32,10 @@ footer {
 
 a {
     position: relative;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 a::after {
@@ -136,8 +142,6 @@ a::after {
 
 .cursor {
   position: fixed;
-  top: 0;
-  left: 0;
   mix-blend-mode: difference;
   z-index: 1000;
   transition-duration: 150ms;
