--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -19,6 +19,7 @@ body {
     cursor: none;
     -ms-overflow-style: none; 
     overflow: -moz-scrollbars-none; 
+    transition: all 0.3s;
 }
 
 header {
