--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,8 +1,11 @@
+/* Import style */
 @import url('menu.css');
 
+/* Style TailwindCSS */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* */
 
 /* Fonts */
 @font-face {
@@ -13,13 +16,18 @@
    }
 /* */
 
+/* General */
 body {
     font-family: 'Uncut Sans', sans-serif;
     color: #141414;
     cursor: none;
-    -ms-overflow-style: none; 
-    overflow: -moz-scrollbars-none; 
+    -ms-overflow-style: none;
+    overflow: -moz-scrollbars-none;
     transition: all 0.3s;
+}
+
+body, a, button {
+  cursor: none;
 }
 
 header {
@@ -31,12 +39,14 @@ footer {
     background-color: #edeae6;
 }
 
-a {
-    position: relative;
-}
-
 body::-webkit-scrollbar {
   display: none;
+}
+/* */
+
+/* Liens */
+a {
+  position: relative;
 }
 
 a::after {
@@ -71,6 +81,7 @@ a::after {
   position: absolute;
   bottom: -0.2em;
 }
+/* */
 
 .center {
     transform: translate(-50%, -50%);
@@ -82,26 +93,26 @@ a::after {
     padding: 4vh;
 }
 
-/* Accueil */
+/* Hero Accueil */
 .cover__mask {
-    mask-image: url('/img/test.png');
-    mask-size: 100%;
-    mask-repeat: no-repeat;
-  }
-  .cover__parent {
-    position: relative;
-    contain: content;
-    background-image: url('/img/GLASS_COLOR_PLANT_OFF.png');
-    max-width: 100%;
-  }
-  .cover__rectangle {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 71%;
-    background-color: #edeae6;
-  }
+  mask-image: url('/img/test.png');
+  mask-size: 100%;
+ mask-repeat: no-repeat;
+}
+.cover__parent {
+  position: relative;
+  contain: content;
+  background-image: url('/img/GLASS_COLOR_PLANT_OFF.png');
+  max-width: 100%;
+}
+.cover__rectangle {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 71%;
+  background-color: #edeae6;
+}
 /* */
 
 @layer components {
@@ -110,6 +121,7 @@ a::after {
   }
 }
 
+/* Style pages projets */
 .project__page {
   background-color: #141414;
   color: #edeae6;
@@ -117,7 +129,7 @@ a::after {
   font-weight: bold;
   line-height: 1.3;
 }
-
+/* Animation images projets */
 .animate-hover {
   opacity: 0;
 }
@@ -129,10 +141,10 @@ a::after {
 .animate--anim:hover {
   filter: blur(0);
 }
+/* */
 
 /* Cursor */
-
-.cursor {
+.cursor { /* Curseur personnalisé */
   position: fixed;
   mix-blend-mode: difference;
   z-index: 1000;
@@ -140,8 +152,12 @@ a::after {
   transition-timing-function: ease-out;
   pointer-events: none;
 }
+.cursor.large, /* Curseur agrandi au survol */
+body:active .cursor { /* Curseur agrandi au clic */
+  transform: scale(1.5);
+}
 
-.cursor circle {
+.cursor circle { /* Cercle du curseur */
   fill: white;
 }
 
@@ -156,3 +172,4 @@ a::after {
       display: none;
   }
 }
+/* */
