--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -237,3 +237,48 @@ body:active .cursor { /* Curseur agrandi au clic */
 input#password::placeholder {
   font-size: 1.6em;
 }
+
+/* Style Home Project Scroll */
+.scrollable-content {
+  white-space: nowrap;
+  overflow: hidden;
+  display: flex;
+  animation: scroll 60s linear infinite;
+  transition: all 0.5s ease-in-out;
+}
+
+.scrollable-content h3 {
+  visibility: hidden;
+}
+
+.mask-project {
+  width: 100%;
+  height: 100%;
+  background-size: 100%;
+  background-position: center;
+  overflow: hidden;
+}
+
+.scrollable-content:hover {
+  background-color: #141414;
+}
+
+@keyframes scroll {
+  0% {
+      transform: translate3d(0, 0, 0);
+  }
+
+  100% {
+      transform: translate3d(-30%, 0, 0);
+  }
+}
+
+@media (min-width: 768px) {
+  .scrollable-content img {
+      max-width: none;
+  }
+  .scrollable-content h3 {
+      display: none;
+  }
+}
+/* */
