--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -42,13 +42,22 @@ footer {
 body::-webkit-scrollbar {
   display: none;
 }
+
+.center {
+  transform: translate(-50%, -50%);
+}
+
+.footer__class {
+  display: grid;
+  grid-template-columns: 4fr 1fr;
+  padding: 4vh;
+}
 /* */
 
-/* Liens */
+/* Links */
 a {
   position: relative;
 }
-
 a::after {
     content: '';
     position: absolute;
@@ -60,7 +69,6 @@ a::after {
     opacity: 0;
     transition-duration: 300ms;
 }
-
 .link:hover {
     text-decoration: none;
     transition-duration: 300ms;
@@ -83,17 +91,7 @@ a::after {
 }
 /* */
 
-.center {
-    transform: translate(-50%, -50%);
-}
-
-.footer__class {
-    display: grid;
-    grid-template-columns: 4fr 1fr;
-    padding: 4vh;
-}
-
-/* Hero Accueil */
+/* Home page Hero */
 .cover__mask {
   mask-image: url('/img/test.png');
   mask-size: 100%;
@@ -115,13 +113,14 @@ a::after {
 }
 /* */
 
+/* Time */
 @layer components {
   .current-time {
     transform: translate(-50%, 0%);
   }
 }
 
-/* Style pages projets */
+/* Style Projets */
 .project__page {
   background-color: #141414;
   color: #edeae6;
@@ -156,11 +155,9 @@ a::after {
 body:active .cursor { /* Curseur agrandi au clic */
   transform: scale(1.5);
 }
-
 .cursor circle { /* Cercle du curseur */
   fill: white;
 }
-
 @media (max-width: 768px) {
   .footer__class {
       padding: 2vh;
@@ -174,7 +171,7 @@ body:active .cursor { /* Curseur agrandi au clic */
 }
 /* */
 
-/* Style page notes */
+/* Style Notes */
 .notes__grille {
   display: grid;
   grid-template-columns: 1fr;
@@ -196,9 +193,13 @@ body:active .cursor { /* Curseur agrandi au clic */
 .notes__social-link:hover {
   opacity: 1;
 }
-/*  */
 
-/* Style contact */
+input#password::placeholder {
+  font-size: 1.6em;
+}
+/* */
+
+/* Style Contact */
 .input__contact {
   background: none;
   color: #edeae6;
@@ -232,13 +233,9 @@ body:active .cursor { /* Curseur agrandi au clic */
 .list__input input[type="checkbox"]:checked + .label__contact::after {
   opacity: 1;
 }
+/* */
 
-
-input#password::placeholder {
-  font-size: 1.6em;
-}
-
-/* Style Home Project Scroll */
+/* Home Project Scroll */
 .scrollable-content {
   white-space: nowrap;
   overflow: hidden;
@@ -246,11 +243,9 @@ input#password::placeholder {
   animation: scroll 60s linear infinite;
   transition: all 0.5s ease-in-out;
 }
-
 .scrollable-content h3 {
   visibility: hidden;
 }
-
 .mask-project {
   width: 100%;
   height: 100%;
@@ -258,11 +253,9 @@ input#password::placeholder {
   background-position: center;
   overflow: hidden;
 }
-
 .scrollable-content:hover {
   background-color: #141414;
 }
-
 @keyframes scroll {
   0% {
       transform: translate3d(0, 0, 0);
