--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -105,6 +105,7 @@ a::after {
   font-size: 1.875rem;
   font-weight: bold;
   line-height: 1.3;
+  padding-bottom: 6vh;
 }
 /* Animation images projets */
 .animate-hover {
