--- a/src/assets/css/menu.css
+++ b/src/assets/css/menu.css
@@ -9,6 +9,7 @@
     left: 0;
     right: 0;
     width: 100%; 
+    height: 100vh;
     text-align: center;
     align-items: center;
     z-index: 2;
