--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -145,6 +145,7 @@ body:active .cursor { /* Curseur agrandi au clic */
   }
   .project__page {
       font-size: 1.125rem;
+      font-weight: 500;
   }
   .cursor {
       display: none;
